# try-rp2040

./: Cargo.toml
.cargo/: config
src/: main.rs
